prototype: handle serial on child process

--- a/native/src/index.html
+++ b/native/src/index.html
@@ -2,11 +2,15 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Hello World!</title>
+    <title>FSK Traffic Control Console</title>
     <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="btn.css" />
   </head>
   <body>
     <h1>💖 Hello World!</h1>
     <p>Welcome to your Electron application.</p>
+    <p id="connect" class="btn green">connect</p>
   </body>
+
+  <script src='./render.js'></script>
 </html>
