--- a/native/src/index.html
+++ b/native/src/index.html
@@ -30,7 +30,7 @@
         <i class="fa fw fa-sliders"></i>
         <span class="tooltip">엔트리 관리</span>
       </li>
-      <li style="position: absolute; bottom: 0; width: 5rem;"
+      <li style="position: fixed; bottom: 0; width: 5rem;"
         onclick="ipcRenderer.send('open-url', 'https://github.com/luftaquila/fsk-traffic-control');">
         <i class="fab fw fa-github"></i>
         <span class="tooltip">luftaquila/fsk-traffic-control</span>
@@ -49,14 +49,14 @@
       <article>
         <h2>
           <i class="fa fw fa-cash-register"></i>컨트롤러 설정
-          <span id="controller-id"></span>
+          <span class="controller-id"></span>
         </h2>
         <div>
-          <div id="controller-status-color" style="color: orange">
-            <i class="fa fw fa-circle-info"></i><span id="controller-status">연결 대기</span>
+          <div class="controller-status-color" style="color: orange">
+            <i class="fa fw fa-circle-info"></i><span class="controller-status">연결 대기</span>
           </div>
           <div>
-            <span id="connect" class="btn red"><i class="fab fw fa-usb"></i>컨트롤러 연결</span>
+            <span class="connect" class="btn red"><i class="fab fw fa-usb"></i>컨트롤러 연결</span>
           </div>
         </div>
       </article>
@@ -70,13 +70,13 @@
                 <i class="fa fw fa-plane-departure"></i>START
               </td>
               <td>:</td>
-              <td><input type="number" id="start-sensor-id" class="sensor-id" style="width: 2rem;"></td>
+              <td><input type="number" id="start-sensor-id" class="sensor-id" placeholder="센서 ID"></td>
               <td id="start-sensor-offset" style="padding-left: 1rem;"></td>
             </tr>
             <tr>
               <td><i class="fa fw fa-plane-arrival"></i>END</td>
               <td>:</td>
-              <td><input type="number" id="end-sensor-id" class="sensor-id" style="width: 2rem;"></td>
+              <td><input type="number" id="end-sensor-id" class="sensor-id" placeholder="센서 ID"></td>
               <td id="end-sensor-offset" style="padding-left: 1rem;"></td>
             </tr>
           </table>
@@ -85,11 +85,16 @@
       </article>
 
       <article>
-        <h2><i class="fa fw fa-tent"></i>팀 설정</h2>
+        <h2><i class="fa fw fa-calendar-check"></i>경기 설정</h2>
         <div>
-          <select class='select-team'>
-            <option selected disabled>팀 선택</option>
-          </select>
+          <div>
+            이벤트 이름: <input class='event-name'>
+          </div>
+          <div>
+            <select class='select-team'>
+              <option selected disabled>팀 선택</option>
+            </select>
+          </div>
         </div>
       </article>
 
@@ -130,6 +135,75 @@
       </div>
 
       <article>
+        <h2>
+          <i class="fa fw fa-cash-register"></i>컨트롤러 설정
+          <span class="controller-id"></span>
+        </h2>
+        <div>
+          <div class="controller-status-color" style="color: orange">
+            <i class="fa fw fa-circle-info"></i><span class="controller-status">연결 대기</span>
+          </div>
+          <div>
+            <span class="connect" class="btn red"><i class="fab fw fa-usb"></i>컨트롤러 연결</span>
+          </div>
+        </div>
+      </article>
+
+      <article>
+        <h2><i class="fa fw fa-video"></i>센서 설정</h2>
+        <div>
+          레인 개수: <input type="number" id="cnt-lane" value="2">
+          <table id="competitive-sensor-table" style="margin: 1rem 0;">
+            <tr>
+              <td>
+                <i class="fa fw fa-1"></i>
+              </td>
+              <td><input type="number" id="sensor-id-lane-1" class="sensor-id" placeholder="센서 ID"></td>
+              <td id="sensor-offset-lane-1" style="padding-left: 1rem;"></td>
+            </tr>
+            <tr>
+              <td>
+                <i class="fa fw fa-2"></i>
+              </td>
+              <td><input type="number" id="sensor-id-lane-2" class="sensor-id" placeholder="센서 ID"></td>
+              <td id="sensor-offset-lane-2" style="padding-left: 1rem;"></td>
+            </tr>
+          </table>
+          <span class="set-sensor active-connect btn blue disabled"><i class="fa fw fa-microchip"></i>센서 설정</span>
+        </div>
+      </article>
+
+      <article>
+        <h2><i class="fa fw fa-calendar-check"></i>경기 설정</h2>
+        <div>
+          <div>
+            이벤트 이름: <input class='event-name'>
+          </div>
+          <div>
+            <table id="competitive-team-table">
+              <tr>
+                <td>
+                  <i class="fa fw fa-1"></i>
+                </td>
+                <td>
+                  <select id="team-lane-1" class='select-team'>
+                    <option selected disabled>팀 선택</option>
+                  </select>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <i class="fa fw fa-2"></i>
+                </td>
+                <td>
+                  <select id="team-lane-2" class='select-team'>
+                    <option selected disabled>팀 선택</option>
+                  </select>
+                </td>
+              </tr>
+            </table>
+          </div>
+        </div>
       </article>
     </div>
 
