update: set event title

--- a/native/src/index.html
+++ b/native/src/index.html
@@ -56,7 +56,7 @@
             <i class="fa fw fa-circle-info"></i><span class="controller-status">연결 대기</span>
           </div>
           <div>
-            <span class="connect" class="btn red"><i class="fab fw fa-usb"></i>컨트롤러 연결</span>
+            <span class="connect btn red"><i class="fab fw fa-usb"></i>컨트롤러 연결</span>
           </div>
         </div>
       </article>
@@ -122,7 +122,7 @@
     </div>
 
     <div class="monitor">
-      <h2>가나다라마바사아</h2>
+      <h1 id="record-title"><script>document.write(new Date().getFullYear())</script> FSK</h1>
     </div>
   </div>
 
@@ -144,7 +144,7 @@
             <i class="fa fw fa-circle-info"></i><span class="controller-status">연결 대기</span>
           </div>
           <div>
-            <span class="connect" class="btn red"><i class="fab fw fa-usb"></i>컨트롤러 연결</span>
+            <span class="connect btn red"><i class="fab fw fa-usb"></i>컨트롤러 연결</span>
           </div>
         </div>
       </article>
@@ -208,7 +208,7 @@
     </div>
 
     <div class="monitor">
-      <h2>가나다라마바사아</h2>
+      <h1 id="competitive-title"><script>document.write(new Date().getFullYear())</script> FSK</h1>
     </div>
   </div>
 
@@ -217,7 +217,7 @@
       <h1>⏱️ 랩 타임 측정 모드</h1>
 
       <div class="mode-description">
-        센서가 녹색등 점등 시점부터의 통과 시간을 모두 기록합니다.
+        녹색등 점등 시점부터의 센서 통과 시간을 모두 기록합니다.
       </div>
 
       <article>
@@ -225,7 +225,7 @@
     </div>
 
     <div class="monitor">
-      <h2>가나다라마바사아</h2>
+      <h1 id="lap-title"><script>document.write(new Date().getFullYear())</script> FSK</h1>
     </div>
   </div>
 
