add: $RESET protocol command

--- a/native/src/index.html
+++ b/native/src/index.html
@@ -76,6 +76,7 @@
           </div>
           <div>
             <span class="connect btn red"><i class="fab fw fa-usb"></i>컨트롤러 연결</span>
+            <span class="reset active-connect btn orange disabled"><i class="fa fw fa-arrow-rotate-right"></i>리셋</span>
           </div>
         </div>
       </article>
@@ -172,6 +173,7 @@
           </div>
           <div>
             <span class="connect btn red"><i class="fab fw fa-usb"></i>컨트롤러 연결</span>
+            <span class="reset active-connect btn orange disabled"><i class="fa fw fa-arrow-rotate-right"></i>리셋</span>
           </div>
         </div>
       </article>
@@ -284,6 +286,7 @@
           </div>
           <div>
             <span class="connect btn red"><i class="fab fw fa-usb"></i>컨트롤러 연결</span>
+            <span class="reset active-connect btn orange disabled"><i class="fa fw fa-arrow-rotate-right"></i>리셋</span>
           </div>
         </div>
       </article>
