add: lap record section

--- a/native/src/index.html
+++ b/native/src/index.html
@@ -350,6 +350,8 @@
         <span class="traffic"></span>
         <div class="clock">00:00:00.000</div>
       </article>
+
+      <article id="lap-log"></article>
     </div>
   </div>
 
