--- a/native/src/index.html
+++ b/native/src/index.html
@@ -168,7 +168,10 @@
       <article>
         <h2><i class="fa fw fa-microchip"></i>센서</h2>
         <div>
-          레인 개수: <input type="number" id="cnt-lane" value="2" style="width: 2rem; text-align: center;">
+          <div style="display: flex; align-items: center;">
+            <div>레인: <span id="cnt-lane-text">2</span>개</div>
+            <input type="range" id="cnt-lane" min="1" max="4" value="2">
+          </div>
           <table id="competitive-sensor-table" style="margin: 1rem 0;">
             <tr>
               <td>
