migrate: tauri from electron

--- a/native/src/index.html
+++ b/native/src/index.html
@@ -1,16 +1,17 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="ko">
 
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FSK Traffic Control Console</title>
-  <link rel="stylesheet" href="index.css" />
+  <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="fonts.css" />
   <link rel="stylesheet" href="btn.css" />
-  <link rel="stylesheet" href="../node_modules/@fortawesome/fontawesome-free/css/all.min.css" />
-  <link rel="stylesheet" href="../node_modules/notyf/notyf.min.css" />
-  <link rel="stylesheet" href="../node_modules/simple-datatables/dist/style.css" />
-  <link rel="stylesheet" href="../node_modules/simple-datatables/dist/editing.css" />
+  <link rel="stylesheet" href="@fortawesome/fontawesome-free/css/all.min.css" />
+  <link rel="stylesheet" href="notyf/notyf.min.css" />
+  <link rel="stylesheet" href="simple-datatables/dist/style.css" />
+  <link rel="stylesheet" href="simple-datatables/dist/editing.css" />
 </head>
 
 <body>
@@ -442,6 +443,8 @@
   </div>
 </body>
 
-<script src='./render.js'></script>
+<script src='notyf/notyf.min.js'></script>
+<script src='simple-datatables/dist/umd/simple-datatables.js'></script>
+<script src='main.js'></script>
 
 </html>
