fix: all UI bugs

--- a/native/src/index.html
+++ b/native/src/index.html
@@ -81,13 +81,13 @@
                 </td>
                 <td>:</td>
                 <td><input type="number" id="start-sensor-id" class="sensor-id" placeholder="센서 ID"></td>
-                <td id="start-sensor-offset" style="padding-left: 1rem;"></td>
+                <td id="start-sensor-offset" class="sensor-offset" style="padding-left: 1rem;"></td>
               </tr>
               <tr>
                 <td><i class="fa fw fa-stop"></i>도착점</td>
                 <td>:</td>
                 <td><input type="number" id="end-sensor-id" class="sensor-id" placeholder="센서 ID"></td>
-                <td id="end-sensor-offset" style="padding-left: 1rem;"></td>
+                <td id="end-sensor-offset" class="sensor-offset" style="padding-left: 1rem;"></td>
               </tr>
             </table>
             <span class="set-sensor active-connect btn blue disabled"><i class="fa fw fa-download"></i>설정 입력</span>
@@ -188,14 +188,14 @@
                   <i class="fa fw fa-1"></i>
                 </td>
                 <td><input type="number" id="sensor-id-lane-1" class="sensor-id" placeholder="센서 ID"></td>
-                <td id="sensor-offset-lane-1" style="padding-left: 1rem;"></td>
+                <td id="sensor-offset-lane-1" class="sensor-offset" style="padding-left: 1rem;"></td>
               </tr>
               <tr>
                 <td>
                   <i class="fa fw fa-2"></i>
                 </td>
                 <td><input type="number" id="sensor-id-lane-2" class="sensor-id" placeholder="센서 ID"></td>
-                <td id="sensor-offset-lane-2" style="padding-left: 1rem;"></td>
+                <td id="sensor-offset-lane-2" class="sensor-offset" style="padding-left: 1rem;"></td>
               </tr>
             </table>
             <span class="set-sensor active-connect btn blue disabled"><i class="fa fw fa-download"></i>설정 입력</span>
@@ -327,7 +327,7 @@
                 </td>
                 <td>:</td>
                 <td><input type="number" id="lap-sensor-id" class="sensor-id" placeholder="센서 ID"></td>
-                <td id="start-sensor-offset" style="padding-left: 1rem;"></td>
+                <td id="start-sensor-offset" class="sensor-offset" style="padding-left: 1rem;"></td>
               </tr>
             </table>
             <span class="set-sensor active-connect btn blue disabled"><i class="fa fw fa-download"></i>설정 입력</span>
